add redux store

--- a/src/packages/antd-theme/antd.less
+++ b/src/packages/antd-theme/antd.less
@@ -1,1 +1,35 @@
 @import "antd/dist/reset.css";
+
+html,
+body,
+#root {
+  height: 100%;
+}
+
+.colorWeak {
+  filter: invert(80%);
+}
+
+.ant-layout {
+  min-height: 100vh;
+}
+
+canvas {
+  display: block;
+}
+
+body {
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #f0f2f5;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+#root > div {
+  height: 100%;
+}
