--- a/projects/browser-extension/src/style.css
+++ b/projects/browser-extension/src/style.css
@@ -13,3 +13,14 @@
   text-decoration: none;
   width: 100%;
 }
+
+.full-screen {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+}
