--- a/projects/browser-extension/src/options/index.css
+++ b/projects/browser-extension/src/options/index.css
@@ -66,3 +66,14 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.full-screen {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+}
