--- a/projects/desktop-app/ui/components/update/Progress/progress.css
+++ b/projects/desktop-app/ui/components/update/Progress/progress.css
@@ -12,7 +12,11 @@
   .update-progress-rate {
     height: 6px;
     border-radius: 3px;
-    background-image: linear-gradient(to right, rgb(130, 86, 208) 0%, var(--primary-color) 100%)
+    background-image: linear-gradient(
+      to right,
+      rgb(130, 86, 208) 0%,
+      var(--primary-color) 100%
+    );
   }
 
   .update-progress-num {
