--- a/projects/desktop-app/src/ui-src/pages/dashboard/style.css
+++ b/projects/desktop-app/src/ui-src/pages/dashboard/style.css
@@ -2,3 +2,16 @@
   width: 10px !important;
   height: 10px !important;
 }
+
+.browser-extension .ant-collapse-header {
+  padding-left: 0px !important;
+  padding-bottom: 0px !important;
+}
+
+.browser-extension .ant-collapse-content-box {
+  padding-top: 0px !important;
+}
+
+.browser-extension .ant-collapse-content-box ul {
+  padding-left: 0px !important;
+}
